--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="style/normalize.css" />
+    <link rel="stylesheet" href="style/bootstrap.css" />
     <link rel="stylesheet" href="style/main.css" />
     <title>Where in the world ?</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Start Nav -->
+    <nav>
+      <div class="container nav-container">
+        <p>Where in the world ?</p>
+        <a href="#" class="mode">
+          <!-- fa-solid-->
+          <i class="fa-regular fa-moon"></i>
+          <span>Dark Mode</span>
+        </a>
+      </div>
+    </nav>
+    <!-- End Nav -->
+    <!--  -->
+
+
+    <!-- Script -->
+    <script src="script/bootstrap.js"></script>
+    <script src="script/main.js"></script>
+  </body>
 </html>
