create seacrh input

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
       </div>
     </nav>
     <!-- End Nav -->
-    <!--  -->
-
+    <!-- Start Search -->
+    <div class="search">
+      <div class="container search-container">
+        <div>
+          <span><i class="fa-solid fa-magnifying-glass"></i></span>
+          <input type="text" placeholder="Search for a country...." id="search"/>
+        </div>
+      </div>
+    </div>
+    <!-- End Search -->
 
     <!-- Script -->
     <script src="script/bootstrap.js"></script>
