--- a/index.html
+++ b/index.html
@@ -33,7 +33,28 @@
       <div class="container search-container">
         <div>
           <span><i class="fa-solid fa-magnifying-glass"></i></span>
-          <input type="text" placeholder="Search for a country...." id="search"/>
+          <input
+            type="text"
+            placeholder="Search for a country...."
+            id="search"
+          />
+        </div>
+        <div class="dropdown">
+          <button
+            class="btn  dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Filter by Region
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Africa</a></li>
+            <li><a class="dropdown-item" href="#">America</a></li>
+            <li><a class="dropdown-item" href="#">Asia</a></li>
+            <li><a class="dropdown-item" href="#">Europe</a></li>
+            <li><a class="dropdown-item" href="#">Oceania</a></li>
+          </ul>
         </div>
       </div>
     </div>
