countries section structure

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn  dropdown-toggle"
+            class="btn dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -59,6 +59,25 @@
       </div>
     </div>
     <!-- End Search -->
+    <!-- Start Countries -->
+    <div class="countries mt-5">
+      <div class="container countries-container">
+        <div class="row">
+          <div class="box col-3">
+            <div class="image">
+              <img src="test.JPG" class="img-fluid" alt="" />
+            </div>
+            <div class="content">
+              <p>Germany</p>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Countries -->
 
     <!-- Script -->
     <script src="script/bootstrap.js"></script>
