create countries container

--- a/index.html
+++ b/index.html
@@ -60,15 +60,58 @@
     </div>
     <!-- End Search -->
     <!-- Start Countries -->
-    <div class="countries mt-5">
+    <div class="countries my-5">
       <div class="container countries-container">
-        <div class="row">
-          <div class="box col-3">
-            <div class="image">
-              <img src="test.JPG" class="img-fluid" alt="" />
-            </div>
+        <div class="countries-row">
+          <div class="box">
+            <img src="test.JPG" alt="" />
             <div class="content">
-              <p>Germany</p>
+              <h4>Germany</h4>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="test.JPG" alt="" />
+            <div class="content">
+              <h4>Germany</h4>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="test.JPG" alt="" />
+            <div class="content">
+              <h4>Germany</h4>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="test.JPG" alt="" />
+            <div class="content">
+              <h4>Germany</h4>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="test.JPG" alt="" />
+            <div class="content">
+              <h4>Germany</h4>
+              <p><span>Population: </span>81,770,990</p>
+              <p><span>Region: </span>Europe</p>
+              <p><span>Capital: </span>Berlin</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="test.JPG" alt="" />
+            <div class="content">
+              <h4>Germany</h4>
               <p><span>Population: </span>81,770,990</p>
               <p><span>Region: </span>Europe</p>
               <p><span>Capital: </span>Berlin</p>
