load all countries when page loaded

--- a/index.html
+++ b/index.html
@@ -62,62 +62,7 @@
     <!-- Start Countries -->
     <div class="countries my-5">
       <div class="container countries-container">
-        <div class="countries-row">
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-          <div class="box">
-            <img src="test.JPG" alt="" />
-            <div class="content">
-              <h4>Germany</h4>
-              <p><span>Population: </span>81,770,990</p>
-              <p><span>Region: </span>Europe</p>
-              <p><span>Capital: </span>Berlin</p>
-            </div>
-          </div>
-        </div>
+        <div class="countries-row"></div>
       </div>
     </div>
     <!-- End Countries -->
