--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     <!-- End Nav -->
     <!-- Start Search -->
     <div class="search">
+      <div
+        class="container text-center my-3"
+        style="display: none"
+        id="message"
+      >
+        <p class="alert alert-danger">
+          There is no Country with this name make sure of the name you want to
+          search for ;)
+        </p>
+      </div>
       <div class="container search-container">
         <div>
           <span><i class="fa-solid fa-magnifying-glass"></i></span>
