--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
             Filter by Region
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Africa</a></li>
-            <li><a class="dropdown-item" href="#">America</a></li>
-            <li><a class="dropdown-item" href="#">Asia</a></li>
-            <li><a class="dropdown-item" href="#">Europe</a></li>
-            <li><a class="dropdown-item" href="#">Oceania</a></li>
+            <li><a class="dropdown-item region" href="#">All</a></li>
+            <li><a class="dropdown-item region" href="#">Africa</a></li>
+            <li><a class="dropdown-item region" href="#">America</a></li>
+            <li><a class="dropdown-item region" href="#">Asia</a></li>
+            <li><a class="dropdown-item region" href="#">Europe</a></li>
+            <li><a class="dropdown-item region" href="#">Oceania</a></li>
           </ul>
         </div>
       </div>
