add dark mode feature to the app

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav>
       <div class="container nav-container">
         <p>Where in the world ?</p>
-        <a href="#" class="mode">
+        <a href="#" id="mode">
           <!-- fa-solid-->
-          <i class="fa-regular fa-moon"></i>
+          <i class="fa-regular fa-moon" id="moon"></i>
           <span>Dark Mode</span>
         </a>
       </div>
@@ -49,7 +49,7 @@
             id="search"
           />
         </div>
-        <div class="dropdown">
+        <div class="dropdown drop">
           <button
             class="btn dropdown-toggle"
             type="button"
@@ -58,13 +58,13 @@
           >
             Filter by Region
           </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item region" href="#">All</a></li>
-            <li><a class="dropdown-item region" href="#">Africa</a></li>
-            <li><a class="dropdown-item region" href="#">America</a></li>
-            <li><a class="dropdown-item region" href="#">Asia</a></li>
-            <li><a class="dropdown-item region" href="#">Europe</a></li>
-            <li><a class="dropdown-item region" href="#">Oceania</a></li>
+          <ul class="dropdown-menu menu">
+            <li><a href="#" class="region">All</a></li>
+            <li><a href="#" class="region">Africa</a></li>
+            <li><a href="#" class="region">America</a></li>
+            <li><a href="#" class="region">Asia</a></li>
+            <li><a href="#" class="region">Europe</a></li>
+            <li><a href="#" class="region">Oceania</a></li>
           </ul>
         </div>
       </div>
