make single country page design

--- a/index.html
+++ b/index.html
@@ -21,15 +21,49 @@
       <div class="container nav-container">
         <p>Where in the world ?</p>
         <a href="#" id="mode">
-          <!-- fa-solid-->
           <i class="fa-regular fa-moon" id="moon"></i>
           <span>Dark Mode</span>
         </a>
       </div>
     </nav>
     <!-- End Nav -->
+    <div class="country mt-5">
+      <div class="container">
+        <button id="back">
+          <i class="fa-solid fa-arrow-left me-2"></i> <span>Back</span>
+        </button>
+        <div class="country-container my-5">
+          <div class="image">
+            <img src="test.JPG" alt="" />
+          </div>
+          <div class="content">
+            <p>Belgium</p>
+            <div class="info">
+              <div class="box">
+                <p>Native Name: <span>mahmoud</span></p>
+                <p>Population: <span></span></p>
+                <p>Region: <span></span></p>
+                <p>Sub Region: <span></span></p>
+                <p>Capital: <span></span></p>
+              </div>
+              <div class="box">
+                <p>Top Level Domain: <span></span></p>
+                <p>Currencies: <span></span></p>
+                <p>Languages: <span></span></p>
+              </div>
+            </div>
+            <div class="bord-countries mt-5">
+              <p>Border Countries:</p>
+              <span>France</span>
+              <span>Germany</span>
+              <span>Netherlands</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Start Search -->
-    <div class="search">
+    <div class="search" style="display: none">
       <div
         class="container text-center my-3"
         style="display: none"
@@ -71,7 +105,7 @@
     </div>
     <!-- End Search -->
     <!-- Start Countries -->
-    <div class="countries my-5">
+    <div class="countries my-5" style="display: none">
       <div class="container countries-container">
         <div class="countries-row"></div>
       </div>
