--- a/index.html
+++ b/index.html
@@ -27,43 +27,11 @@
       </div>
     </nav>
     <!-- End Nav -->
-    <div class="country mt-5">
-      <div class="container">
-        <button id="back">
-          <i class="fa-solid fa-arrow-left me-2"></i> <span>Back</span>
-        </button>
-        <div class="country-container my-5">
-          <div class="image">
-            <img src="test.JPG" alt="" />
-          </div>
-          <div class="content">
-            <p>Belgium</p>
-            <div class="info">
-              <div class="box">
-                <p>Native Name: <span>mahmoud</span></p>
-                <p>Population: <span></span></p>
-                <p>Region: <span></span></p>
-                <p>Sub Region: <span></span></p>
-                <p>Capital: <span></span></p>
-              </div>
-              <div class="box">
-                <p>Top Level Domain: <span></span></p>
-                <p>Currencies: <span></span></p>
-                <p>Languages: <span></span></p>
-              </div>
-            </div>
-            <div class="bord-countries mt-5">
-              <p>Border Countries:</p>
-              <span>France</span>
-              <span>Germany</span>
-              <span>Netherlands</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- Start Single Country Page  -->
+    <div class="country mt-5"></div>
+    <!-- End Single Country Page  -->
     <!-- Start Search -->
-    <div class="search" style="display: none">
+    <div class="search">
       <div
         class="container text-center my-3"
         style="display: none"
@@ -105,7 +73,7 @@
     </div>
     <!-- End Search -->
     <!-- Start Countries -->
-    <div class="countries my-5" style="display: none">
+    <div class="countries my-5">
       <div class="container countries-container">
         <div class="countries-row"></div>
       </div>
