--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <!-- End Nav -->
     <!-- Start Single Country Page  -->
-    <div class="country mt-5"></div>
+    <div class="country mt-5" style="display: none"></div>
     <!-- End Single Country Page  -->
     <!-- Start Search -->
     <div class="search">
@@ -72,6 +72,7 @@
       </div>
     </div>
     <!-- End Search -->
+    
     <!-- Start Countries -->
     <div class="countries my-5">
       <div class="container countries-container">
