filter data based on region

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <div class="container nav-container">
         <p>Where in the world ?</p>
-        <a href="#" id="mode">
+        <a style="cursor: pointer" id="mode">
           <i class="fa-regular fa-moon" id="moon"></i>
           <span>Dark Mode</span>
         </a>
@@ -61,18 +61,18 @@
             Filter by Region
           </button>
           <ul class="dropdown-menu menu">
-            <li><a href="#" class="region">All</a></li>
-            <li><a href="#" class="region">Africa</a></li>
-            <li><a href="#" class="region">America</a></li>
-            <li><a href="#" class="region">Asia</a></li>
-            <li><a href="#" class="region">Europe</a></li>
-            <li><a href="#" class="region">Oceania</a></li>
+            <li><a style="cursor: pointer" class="region">All</a></li>
+            <li><a style="cursor: pointer" class="region">Africa</a></li>
+            <li><a style="cursor: pointer" class="region">Americas</a></li>
+            <li><a style="cursor: pointer" class="region">Asia</a></li>
+            <li><a style="cursor: pointer" class="region">Europe</a></li>
+            <li><a style="cursor: pointer" class="region">Oceania</a></li>
           </ul>
         </div>
       </div>
     </div>
     <!-- End Search -->
-    
+
     <!-- Start Countries -->
     <div class="countries my-5">
       <div class="container countries-container">
